--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -107,8 +107,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,11 +118,11 @@
             android:id="@+id/proQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Amount Of Milk"
             android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/imageView6"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -133,6 +133,7 @@
         app:srcCompat="@drawable/attention" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -143,6 +144,8 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
