--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -21,13 +21,13 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
+        android:elevation="20dp"
         android:id="@+id/linear_layout"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:cardCornerRadius="12dp"
         android:layout_marginBottom="7dp"
-        android:backgroundTint="#DDE3FF"
+        android:backgroundTint="#F0F8FF"
         app:layout_constraintBottom_toBottomOf="parent">
 
 
@@ -45,9 +45,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginBottom="12dp"
-                android:text="Total item in cart is 10"
+                android:text="Total item in cart is:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView3" />
 
@@ -60,7 +60,7 @@
                 android:layout_marginBottom="12dp"
                 android:text="Total Cost:2000"
                 android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView3" />
 
@@ -68,8 +68,9 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnCheckout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:text="Checkout"
+                android:textSize="17sp"
                 android:textAllCaps="false"
                />
 
