--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="17dp"
     android:elevation="10dp"
-    android:backgroundTint="#DDE3FF"
+    android:backgroundTint="#F0F8FF"
     android:layout_margin="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,6 +31,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
+                android:layout_marginTop="15dp"
                 android:text="TextView"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -48,25 +49,25 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:layout_marginTop="4dp"
-                android:textColor="@color/black"
-                android:layout_marginStart="12dp"
-                android:text="TextView"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" />
+<!--            <TextView-->
+<!--                android:id="@+id/textView9"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textSize="16sp"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:layout_marginStart="12dp"-->
+<!--                android:text="TextView"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/imageView"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/textView8" />-->
 
             <Button
                 android:id="@+id/button4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
-                android:text="Add"
+                android:text="Buy Now"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -78,8 +79,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:text="Button"
+                android:textStyle="bold"
+                android:textAllCaps="false"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -89,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.5"/>
+                app:layout_constraintGuide_begin="196dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
